tf_fuzz/parser/tf_fuzz_grammar.output
Terminals unused in grammar

   RAW_TEXT
   EQUAL
   ERROR


Grammar

    0 $accept: lines $end

    1 lines: %empty
    2      | line lines

    3 line: PURPOSE
    4     | block
    5     | command SEMICOLON
    6     | command expect SEMICOLON

    7 command: set_command
    8        | remove_command
    9        | read_command
   10        | secure_command
   11        | done_command

   12 expect: EXPECT PASS
   13       | EXPECT FAIL
   14       | EXPECT NOTHING
   15       | EXPECT IDENTIFIER

   16 set_command: SET SST sst_set_base_args sst_set_extended_args
   17            | SET KEY key_set_args
   18            | SET POLICY policy_set_args

   19 read_command: READ SST sst_read_args
   20             | READ KEY key_read_args
   21             | READ POLICY policy_read_args

   22 remove_command: REMOVE SST sst_remove_args
   23               | REMOVE KEY key_remove_args

   24 secure_command: SECURE HASH NEQ ASSET_IDENTIFIER_LIST

   25 done_command: DONE

   26 literal_or_random_data: DATA LITERAL
   27                       | DATA STAR

   28 sst_set_base_args: sst_asset_name literal_or_random_data
   29                  | sst_asset_name
   30                  | sst_asset_name VAR IDENTIFIER
   31                  | sst_asset_name DFNAME sst_asset_set_file_path

   32 sst_set_extended_args: %empty
   33                      | FLAG sst_flags

   34 sst_flags: %empty
   35          | sst_flag sst_flags

   36 sst_flag: none
   37         | write_once
   38         | no_rp
   39         | no_conf

   40 none: NONE

   41 write_once: WRITE_ONCE

   42 no_rp: NO_RP

   43 no_conf: NO_CONF

   44 sst_offset_spec: NUMBER_TOK

   45 sst_read_args: sst_asset_name read_args sst_read_extended_args

   46 read_args: VAR IDENTIFIER
   47          | CHECK read_args_var_name
   48          | CHECK LITERAL
   49          | PRINT
   50          | HASH
   51          | DFNAME sst_asset_dump_file_path

   52 sst_read_extended_args: %empty
   53                       | OFFSET sst_offset_spec

   54 sst_remove_args: sst_asset_name
   55                | random_picked_asset

   56 asset_designator: NAME ASSET_IDENTIFIER_LIST
   57                 | NAME STAR

   58 single_existing_asset: IDENTIFIER
   59                      | random_picked_asset

   60 random_picked_asset: STAR ACTIVE
   61                    | STAR DELETED

   62 sst_asset_name: asset_designator
   63               | UID ASSET_NUMBER_LIST
   64               | UID STAR

   65 sst_asset_set_file_path: FILE_PATH

   66 read_args_var_name: IDENTIFIER

   67 sst_asset_dump_file_path: FILE_PATH

   68 key_size: NUMBER_TOK

   69 policy_usage_list: ATTR policy_usage policy_usages

   70 policy_usages: %empty
   71              | policy_usage policy_usages

   72 export: EXPORT

   73 noexport: NOEXPORT

   74 copy: COPY

   75 nocopy: NOCOPY

   76 encrypt: ENCRYPT

   77 noencrypt: NOENCRYPT

   78 decrypt: DECRYPT

   79 nodecrypt: NODECRYPT

   80 sign: SIGN

   81 nosign: NOSIGN

   82 verify: VERIFY

   83 noverify: NOVERIFY

   84 derive: DERIVE

   85 noderive: NODERIVE

   86 persistent: PERSISTENT

   87 volatle: VOLATILE

   88 policy_usage: export
   89             | copy
   90             | encrypt
   91             | decrypt
   92             | sign
   93             | verify
   94             | derive
   95             | noexport
   96             | nocopy
   97             | noencrypt
   98             | nodecrypt
   99             | nosign
  100             | noverify
  101             | noderive
  102             | persistent
  103             | volatle
  104             | key_size

  105 policy_type: TYPE IDENTIFIER

  106 policy_algorithm: ALG IDENTIFIER

  107 policy_specs: %empty
  108             | policy_spec policy_specs

  109 policy_spec: policy_usage_list
  110            | policy_type
  111            | policy_algorithm

  112 policy_asset_spec: %empty
  113                  | NAME ASSET_IDENTIFIER_LIST
  114                  | NAME STAR

  115 policy_asset_name: NAME IDENTIFIER
  116                  | STAR ACTIVE
  117                  | STAR DELETED
  118                  | KEY IDENTIFIER

  119 policy_set_args: policy_asset_spec policy_specs

  120 policy_read_args: policy_asset_name read_args

  121 key_set_sources: %empty
  122                | key_set_source key_set_sources

  123 key_set_source: literal_or_random_data
  124               | POLICY IDENTIFIER

  125 key_data_or_not: %empty
  126                | literal_or_random_data

  127 key_set_args: asset_designator key_set_sources
  128             | asset_designator FROM single_existing_asset POLICY IDENTIFIER
  129             | asset_designator key_data_or_not WITH policy_specs

  130 key_remove_args: asset_designator

  131 key_read_args: asset_designator read_args

  132 block: SHUFFLE block_content
  133      | exact_sel_count OF block_content
  134      | low_sel_count TO high_sel_count OF block_content

  135 block_content: open_brace lines close_brace
  136              | line

  137 open_brace: OPEN_BRACE

  138 close_brace: CLOSE_BRACE

  139 ASSET_NUMBER_LIST: ASSET_NUMBER ASSET_NUMBERS

  140 ASSET_NUMBERS: %empty
  141              | ASSET_NUMBER ASSET_NUMBERS

  142 ASSET_NUMBER: NUMBER_TOK

  143 ASSET_IDENTIFIER_LIST: ASSET_IDENTIFIER ASSET_IDENTIFIERS

  144 ASSET_IDENTIFIERS: %empty
  145                  | ASSET_IDENTIFIER ASSET_IDENTIFIERS

  146 ASSET_IDENTIFIER: IDENTIFIER_TOK

  147 IDENTIFIER: IDENTIFIER_TOK

  148 FILE_PATH: FILE_PATH_TOK

  149 exact_sel_count: NUMBER

  150 low_sel_count: NUMBER

  151 high_sel_count: NUMBER

  152 NUMBER: NUMBER_TOK

  153 LITERAL: LITERAL_TOK
  154        | HEX_LIST


Terminals, with rules where they appear

$end (0) 0
error (256)
PURPOSE (258) 3
RAW_TEXT (259)
SET (260) 16 17 18
READ (261) 19 20 21
REMOVE (262) 22 23
SECURE (263) 24
DONE (264) 25
SST (265) 16 19 22
KEY (266) 17 20 23 118
POLICY (267) 18 21 124 128
NAME (268) 56 57 113 114 115
UID (269) 63 64
STAR (270) 27 57 60 61 64 114 116 117
ACTIVE (271) 60 116
DELETED (272) 61 117
EQUAL (273)
DATA (274) 26 27
DFNAME (275) 31 51
FLAG (276) 33
NONE (277) 40
WRITE_ONCE (278) 41
NO_RP (279) 42
NO_CONF (280) 43
OFFSET (281) 53
CHECK (282) 47 48
VAR (283) 30 46
HASH (284) 24 50
NEQ (285) 24
PRINT (286) 49
EXPECT (287) 12 13 14 15
PASS (288) 12
FAIL (289) 13
NOTHING (290) 14
ERROR (291)
IDENTIFIER_TOK (292) 146 147
LITERAL_TOK (293) 153
HEX_LIST (294) 154
FILE_PATH_TOK (295) 148
NUMBER_TOK (296) 44 68 142 152
SEMICOLON (297) 5 6
SHUFFLE (298) 132
TO (299) 134
OF (300) 133 134
OPEN_BRACE (301) 137
CLOSE_BRACE (302) 138
ATTR (303) 69
TYPE (304) 105
ALG (305) 106
EXPORT (306) 72
COPY (307) 74
ENCRYPT (308) 76
DECRYPT (309) 78
SIGN (310) 80
VERIFY (311) 82
DERIVE (312) 84
NOEXPORT (313) 73
NOCOPY (314) 75
NOENCRYPT (315) 77
NODECRYPT (316) 79
NOSIGN (317) 81
NOVERIFY (318) 83
NODERIVE (319) 85
PERSISTENT (320) 86
VOLATILE (321) 87
FROM (322) 128
WITH (323) 129


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
lines (70)
    on left: 1 2, on right: 0 2 135
line (71)
    on left: 3 4 5 6, on right: 2 136
command (72)
    on left: 7 8 9 10 11, on right: 5 6
expect (73)
    on left: 12 13 14 15, on right: 6
set_command (74)
    on left: 16 17 18, on right: 7
read_command (75)
    on left: 19 20 21, on right: 9
remove_command (76)
    on left: 22 23, on right: 8
secure_command (77)
    on left: 24, on right: 10
done_command (78)
    on left: 25, on right: 11
literal_or_random_data (79)
    on left: 26 27, on right: 28 123 126
sst_set_base_args (80)
    on left: 28 29 30 31, on right: 16
sst_set_extended_args (81)
    on left: 32 33, on right: 16
sst_flags (82)
    on left: 34 35, on right: 33 35
sst_flag (83)
    on left: 36 37 38 39, on right: 35
none (84)
    on left: 40, on right: 36
write_once (85)
    on left: 41, on right: 37
no_rp (86)
    on left: 42, on right: 38
no_conf (87)
    on left: 43, on right: 39
sst_offset_spec (88)
    on left: 44, on right: 53
sst_read_args (89)
    on left: 45, on right: 19
read_args (90)
    on left: 46 47 48 49 50 51, on right: 45 120 131
sst_read_extended_args (91)
    on left: 52 53, on right: 45
sst_remove_args (92)
    on left: 54 55, on right: 22
asset_designator (93)
    on left: 56 57, on right: 62 127 128 129 130 131
single_existing_asset (94)
    on left: 58 59, on right: 128
random_picked_asset (95)
    on left: 60 61, on right: 55 59
sst_asset_name (96)
    on left: 62 63 64, on right: 28 29 30 31 45 54
sst_asset_set_file_path (97)
    on left: 65, on right: 31
read_args_var_name (98)
    on left: 66, on right: 47
sst_asset_dump_file_path (99)
    on left: 67, on right: 51
key_size (100)
    on left: 68, on right: 104
policy_usage_list (101)
    on left: 69, on right: 109
policy_usages (102)
    on left: 70 71, on right: 69 71
export (103)
    on left: 72, on right: 88
noexport (104)
    on left: 73, on right: 95
copy (105)
    on left: 74, on right: 89
nocopy (106)
    on left: 75, on right: 96
encrypt (107)
    on left: 76, on right: 90
noencrypt (108)
    on left: 77, on right: 97
decrypt (109)
    on left: 78, on right: 91
nodecrypt (110)
    on left: 79, on right: 98
sign (111)
    on left: 80, on right: 92
nosign (112)
    on left: 81, on right: 99
verify (113)
    on left: 82, on right: 93
noverify (114)
    on left: 83, on right: 100
derive (115)
    on left: 84, on right: 94
noderive (116)
    on left: 85, on right: 101
persistent (117)
    on left: 86, on right: 102
volatle (118)
    on left: 87, on right: 103
policy_usage (119)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104,
    on right: 69 71
policy_type (120)
    on left: 105, on right: 110
policy_algorithm (121)
    on left: 106, on right: 111
policy_specs (122)
    on left: 107 108, on right: 108 119 129
policy_spec (123)
    on left: 109 110 111, on right: 108
policy_asset_spec (124)
    on left: 112 113 114, on right: 119
policy_asset_name (125)
    on left: 115 116 117 118, on right: 120
policy_set_args (126)
    on left: 119, on right: 18
policy_read_args (127)
    on left: 120, on right: 21
key_set_sources (128)
    on left: 121 122, on right: 122 127
key_set_source (129)
    on left: 123 124, on right: 122
key_data_or_not (130)
    on left: 125 126, on right: 129
key_set_args (131)
    on left: 127 128 129, on right: 17
key_remove_args (132)
    on left: 130, on right: 23
key_read_args (133)
    on left: 131, on right: 20
block (134)
    on left: 132 133 134, on right: 4
block_content (135)
    on left: 135 136, on right: 132 133 134
open_brace (136)
    on left: 137, on right: 135
close_brace (137)
    on left: 138, on right: 135
ASSET_NUMBER_LIST (138)
    on left: 139, on right: 63
ASSET_NUMBERS (139)
    on left: 140 141, on right: 139 141
ASSET_NUMBER (140)
    on left: 142, on right: 139 141
ASSET_IDENTIFIER_LIST (141)
    on left: 143, on right: 24 56 113
ASSET_IDENTIFIERS (142)
    on left: 144 145, on right: 143 145
ASSET_IDENTIFIER (143)
    on left: 146, on right: 143 145
IDENTIFIER (144)
    on left: 147, on right: 15 30 46 58 66 105 106 115 118 124 128
FILE_PATH (145)
    on left: 148, on right: 65 67
exact_sel_count (146)
    on left: 149, on right: 133
low_sel_count (147)
    on left: 150, on right: 134
high_sel_count (148)
    on left: 151, on right: 134
NUMBER (149)
    on left: 152, on right: 149 150 151
LITERAL (150)
    on left: 153 154, on right: 26 48


State 0

    0 $accept: . lines $end

    PURPOSE     shift, and go to state 1
    SET         shift, and go to state 2
    READ        shift, and go to state 3
    REMOVE      shift, and go to state 4
    SECURE      shift, and go to state 5
    DONE        shift, and go to state 6
    NUMBER_TOK  shift, and go to state 7
    SHUFFLE     shift, and go to state 8

    $default  reduce using rule 1 (lines)

    lines            go to state 9
    line             go to state 10
    command          go to state 11
    set_command      go to state 12
    read_command     go to state 13
    remove_command   go to state 14
    secure_command   go to state 15
    done_command     go to state 16
    block            go to state 17
    exact_sel_count  go to state 18
    low_sel_count    go to state 19
    NUMBER           go to state 20


State 1

    3 line: PURPOSE .

    $default  reduce using rule 3 (line)


State 2

   16 set_command: SET . SST sst_set_base_args sst_set_extended_args
   17            | SET . KEY key_set_args
   18            | SET . POLICY policy_set_args

    SST     shift, and go to state 21
    KEY     shift, and go to state 22
    POLICY  shift, and go to state 23


State 3

   19 read_command: READ . SST sst_read_args
   20             | READ . KEY key_read_args
   21             | READ . POLICY policy_read_args

    SST     shift, and go to state 24
    KEY     shift, and go to state 25
    POLICY  shift, and go to state 26


State 4

   22 remove_command: REMOVE . SST sst_remove_args
   23               | REMOVE . KEY key_remove_args

    SST  shift, and go to state 27
    KEY  shift, and go to state 28


State 5

   24 secure_command: SECURE . HASH NEQ ASSET_IDENTIFIER_LIST

    HASH  shift, and go to state 29


State 6

   25 done_command: DONE .

    $default  reduce using rule 25 (done_command)


State 7

  152 NUMBER: NUMBER_TOK .

    $default  reduce using rule 152 (NUMBER)


State 8

  132 block: SHUFFLE . block_content

    PURPOSE     shift, and go to state 1
    SET         shift, and go to state 2
    READ        shift, and go to state 3
    REMOVE      shift, and go to state 4
    SECURE      shift, and go to state 5
    DONE        shift, and go to state 6
    NUMBER_TOK  shift, and go to state 7
    SHUFFLE     shift, and go to state 8
    OPEN_BRACE  shift, and go to state 30

    line             go to state 31
    command          go to state 11
    set_command      go to state 12
    read_command     go to state 13
    remove_command   go to state 14
    secure_command   go to state 15
    done_command     go to state 16
    block            go to state 17
    block_content    go to state 32
    open_brace       go to state 33
    exact_sel_count  go to state 18
    low_sel_count    go to state 19
    NUMBER           go to state 20


State 9

    0 $accept: lines . $end

    $end  shift, and go to state 34


State 10

    2 lines: line . lines

    PURPOSE     shift, and go to state 1
    SET         shift, and go to state 2
    READ        shift, and go to state 3
    REMOVE      shift, and go to state 4
    SECURE      shift, and go to state 5
    DONE        shift, and go to state 6
    NUMBER_TOK  shift, and go to state 7
    SHUFFLE     shift, and go to state 8

    $default  reduce using rule 1 (lines)

    lines            go to state 35
    line             go to state 10
    command          go to state 11
    set_command      go to state 12
    read_command     go to state 13
    remove_command   go to state 14
    secure_command   go to state 15
    done_command     go to state 16
    block            go to state 17
    exact_sel_count  go to state 18
    low_sel_count    go to state 19
    NUMBER           go to state 20


State 11

    5 line: command . SEMICOLON
    6     | command . expect SEMICOLON

    EXPECT     shift, and go to state 36
    SEMICOLON  shift, and go to state 37

    expect  go to state 38


State 12

    7 command: set_command .

    $default  reduce using rule 7 (command)


State 13

    9 command: read_command .

    $default  reduce using rule 9 (command)


State 14

    8 command: remove_command .

    $default  reduce using rule 8 (command)


State 15

   10 command: secure_command .

    $default  reduce using rule 10 (command)


State 16

   11 command: done_command .

    $default  reduce using rule 11 (command)


State 17

    4 line: block .

    $default  reduce using rule 4 (line)


State 18

  133 block: exact_sel_count . OF block_content

    OF  shift, and go to state 39


State 19

  134 block: low_sel_count . TO high_sel_count OF block_content

    TO  shift, and go to state 40


State 20

  149 exact_sel_count: NUMBER .
  150 low_sel_count: NUMBER .

    TO        reduce using rule 150 (low_sel_count)
    $default  reduce using rule 149 (exact_sel_count)


State 21

   16 set_command: SET SST . sst_set_base_args sst_set_extended_args

    NAME  shift, and go to state 41
    UID   shift, and go to state 42

    sst_set_base_args  go to state 43
    asset_designator   go to state 44
    sst_asset_name     go to state 45


State 22

   17 set_command: SET KEY . key_set_args

    NAME  shift, and go to state 41

    asset_designator  go to state 46
    key_set_args      go to state 47


State 23

   18 set_command: SET POLICY . policy_set_args

    NAME  shift, and go to state 48

    $default  reduce using rule 112 (policy_asset_spec)

    policy_asset_spec  go to state 49
    policy_set_args    go to state 50


State 24

   19 read_command: READ SST . sst_read_args

    NAME  shift, and go to state 41
    UID   shift, and go to state 42

    sst_read_args     go to state 51
    asset_designator  go to state 44
    sst_asset_name    go to state 52


State 25

   20 read_command: READ KEY . key_read_args

    NAME  shift, and go to state 41

    asset_designator  go to state 53
    key_read_args     go to state 54


State 26

   21 read_command: READ POLICY . policy_read_args

    KEY   shift, and go to state 55
    NAME  shift, and go to state 56
    STAR  shift, and go to state 57

    policy_asset_name  go to state 58
    policy_read_args   go to state 59


State 27

   22 remove_command: REMOVE SST . sst_remove_args

    NAME  shift, and go to state 41
    UID   shift, and go to state 42
    STAR  shift, and go to state 60

    sst_remove_args      go to state 61
    asset_designator     go to state 44
    random_picked_asset  go to state 62
    sst_asset_name       go to state 63


State 28

   23 remove_command: REMOVE KEY . key_remove_args

    NAME  shift, and go to state 41

    asset_designator  go to state 64
    key_remove_args   go to state 65


State 29

   24 secure_command: SECURE HASH . NEQ ASSET_IDENTIFIER_LIST

    NEQ  shift, and go to state 66


State 30

  137 open_brace: OPEN_BRACE .

    $default  reduce using rule 137 (open_brace)


State 31

  136 block_content: line .

    $default  reduce using rule 136 (block_content)


State 32

  132 block: SHUFFLE block_content .

    $default  reduce using rule 132 (block)


State 33

  135 block_content: open_brace . lines close_brace

    PURPOSE     shift, and go to state 1
    SET         shift, and go to state 2
    READ        shift, and go to state 3
    REMOVE      shift, and go to state 4
    SECURE      shift, and go to state 5
    DONE        shift, and go to state 6
    NUMBER_TOK  shift, and go to state 7
    SHUFFLE     shift, and go to state 8

    $default  reduce using rule 1 (lines)

    lines            go to state 67
    line             go to state 10
    command          go to state 11
    set_command      go to state 12
    read_command     go to state 13
    remove_command   go to state 14
    secure_command   go to state 15
    done_command     go to state 16
    block            go to state 17
    exact_sel_count  go to state 18
    low_sel_count    go to state 19
    NUMBER           go to state 20


State 34

    0 $accept: lines $end .

    $default  accept


State 35

    2 lines: line lines .

    $default  reduce using rule 2 (lines)


State 36

   12 expect: EXPECT . PASS
   13       | EXPECT . FAIL
   14       | EXPECT . NOTHING
   15       | EXPECT . IDENTIFIER

    PASS            shift, and go to state 68
    FAIL            shift, and go to state 69
    NOTHING         shift, and go to state 70
    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 72


State 37

    5 line: command SEMICOLON .

    $default  reduce using rule 5 (line)


State 38

    6 line: command expect . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 39

  133 block: exact_sel_count OF . block_content

    PURPOSE     shift, and go to state 1
    SET         shift, and go to state 2
    READ        shift, and go to state 3
    REMOVE      shift, and go to state 4
    SECURE      shift, and go to state 5
    DONE        shift, and go to state 6
    NUMBER_TOK  shift, and go to state 7
    SHUFFLE     shift, and go to state 8
    OPEN_BRACE  shift, and go to state 30

    line             go to state 31
    command          go to state 11
    set_command      go to state 12
    read_command     go to state 13
    remove_command   go to state 14
    secure_command   go to state 15
    done_command     go to state 16
    block            go to state 17
    block_content    go to state 74
    open_brace       go to state 33
    exact_sel_count  go to state 18
    low_sel_count    go to state 19
    NUMBER           go to state 20


State 40

  134 block: low_sel_count TO . high_sel_count OF block_content

    NUMBER_TOK  shift, and go to state 7

    high_sel_count  go to state 75
    NUMBER          go to state 76


State 41

   56 asset_designator: NAME . ASSET_IDENTIFIER_LIST
   57                 | NAME . STAR

    STAR            shift, and go to state 77
    IDENTIFIER_TOK  shift, and go to state 78

    ASSET_IDENTIFIER_LIST  go to state 79
    ASSET_IDENTIFIER       go to state 80


State 42

   63 sst_asset_name: UID . ASSET_NUMBER_LIST
   64               | UID . STAR

    STAR        shift, and go to state 81
    NUMBER_TOK  shift, and go to state 82

    ASSET_NUMBER_LIST  go to state 83
    ASSET_NUMBER       go to state 84


State 43

   16 set_command: SET SST sst_set_base_args . sst_set_extended_args

    FLAG  shift, and go to state 85

    $default  reduce using rule 32 (sst_set_extended_args)

    sst_set_extended_args  go to state 86


State 44

   62 sst_asset_name: asset_designator .

    $default  reduce using rule 62 (sst_asset_name)


State 45

   28 sst_set_base_args: sst_asset_name . literal_or_random_data
   29                  | sst_asset_name .
   30                  | sst_asset_name . VAR IDENTIFIER
   31                  | sst_asset_name . DFNAME sst_asset_set_file_path

    DATA    shift, and go to state 87
    DFNAME  shift, and go to state 88
    VAR     shift, and go to state 89

    $default  reduce using rule 29 (sst_set_base_args)

    literal_or_random_data  go to state 90


State 46

  127 key_set_args: asset_designator . key_set_sources
  128             | asset_designator . FROM single_existing_asset POLICY IDENTIFIER
  129             | asset_designator . key_data_or_not WITH policy_specs

    POLICY  shift, and go to state 91
    DATA    shift, and go to state 87
    FROM    shift, and go to state 92

    WITH      reduce using rule 125 (key_data_or_not)
    $default  reduce using rule 121 (key_set_sources)

    literal_or_random_data  go to state 93
    key_set_sources         go to state 94
    key_set_source          go to state 95
    key_data_or_not         go to state 96


State 47

   17 set_command: SET KEY key_set_args .

    $default  reduce using rule 17 (set_command)


State 48

  113 policy_asset_spec: NAME . ASSET_IDENTIFIER_LIST
  114                  | NAME . STAR

    STAR            shift, and go to state 97
    IDENTIFIER_TOK  shift, and go to state 78

    ASSET_IDENTIFIER_LIST  go to state 98
    ASSET_IDENTIFIER       go to state 80


State 49

  119 policy_set_args: policy_asset_spec . policy_specs

    ATTR  shift, and go to state 99
    TYPE  shift, and go to state 100
    ALG   shift, and go to state 101

    $default  reduce using rule 107 (policy_specs)

    policy_usage_list  go to state 102
    policy_type        go to state 103
    policy_algorithm   go to state 104
    policy_specs       go to state 105
    policy_spec        go to state 106


State 50

   18 set_command: SET POLICY policy_set_args .

    $default  reduce using rule 18 (set_command)


State 51

   19 read_command: READ SST sst_read_args .

    $default  reduce using rule 19 (read_command)


State 52

   45 sst_read_args: sst_asset_name . read_args sst_read_extended_args

    DFNAME  shift, and go to state 107
    CHECK   shift, and go to state 108
    VAR     shift, and go to state 109
    HASH    shift, and go to state 110
    PRINT   shift, and go to state 111

    read_args  go to state 112


State 53

  131 key_read_args: asset_designator . read_args

    DFNAME  shift, and go to state 107
    CHECK   shift, and go to state 108
    VAR     shift, and go to state 109
    HASH    shift, and go to state 110
    PRINT   shift, and go to state 111

    read_args  go to state 113


State 54

   20 read_command: READ KEY key_read_args .

    $default  reduce using rule 20 (read_command)


State 55

  118 policy_asset_name: KEY . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 114


State 56

  115 policy_asset_name: NAME . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 115


State 57

  116 policy_asset_name: STAR . ACTIVE
  117                  | STAR . DELETED

    ACTIVE   shift, and go to state 116
    DELETED  shift, and go to state 117


State 58

  120 policy_read_args: policy_asset_name . read_args

    DFNAME  shift, and go to state 107
    CHECK   shift, and go to state 108
    VAR     shift, and go to state 109
    HASH    shift, and go to state 110
    PRINT   shift, and go to state 111

    read_args  go to state 118


State 59

   21 read_command: READ POLICY policy_read_args .

    $default  reduce using rule 21 (read_command)


State 60

   60 random_picked_asset: STAR . ACTIVE
   61                    | STAR . DELETED

    ACTIVE   shift, and go to state 119
    DELETED  shift, and go to state 120


State 61

   22 remove_command: REMOVE SST sst_remove_args .

    $default  reduce using rule 22 (remove_command)


State 62

   55 sst_remove_args: random_picked_asset .

    $default  reduce using rule 55 (sst_remove_args)


State 63

   54 sst_remove_args: sst_asset_name .

    $default  reduce using rule 54 (sst_remove_args)


State 64

  130 key_remove_args: asset_designator .

    $default  reduce using rule 130 (key_remove_args)


State 65

   23 remove_command: REMOVE KEY key_remove_args .

    $default  reduce using rule 23 (remove_command)


State 66

   24 secure_command: SECURE HASH NEQ . ASSET_IDENTIFIER_LIST

    IDENTIFIER_TOK  shift, and go to state 78

    ASSET_IDENTIFIER_LIST  go to state 121
    ASSET_IDENTIFIER       go to state 80


State 67

  135 block_content: open_brace lines . close_brace

    CLOSE_BRACE  shift, and go to state 122

    close_brace  go to state 123


State 68

   12 expect: EXPECT PASS .

    $default  reduce using rule 12 (expect)


State 69

   13 expect: EXPECT FAIL .

    $default  reduce using rule 13 (expect)


State 70

   14 expect: EXPECT NOTHING .

    $default  reduce using rule 14 (expect)


State 71

  147 IDENTIFIER: IDENTIFIER_TOK .

    $default  reduce using rule 147 (IDENTIFIER)


State 72

   15 expect: EXPECT IDENTIFIER .

    $default  reduce using rule 15 (expect)


State 73

    6 line: command expect SEMICOLON .

    $default  reduce using rule 6 (line)


State 74

  133 block: exact_sel_count OF block_content .

    $default  reduce using rule 133 (block)


State 75

  134 block: low_sel_count TO high_sel_count . OF block_content

    OF  shift, and go to state 124


State 76

  151 high_sel_count: NUMBER .

    $default  reduce using rule 151 (high_sel_count)


State 77

   57 asset_designator: NAME STAR .

    $default  reduce using rule 57 (asset_designator)


State 78

  146 ASSET_IDENTIFIER: IDENTIFIER_TOK .

    $default  reduce using rule 146 (ASSET_IDENTIFIER)


State 79

   56 asset_designator: NAME ASSET_IDENTIFIER_LIST .

    $default  reduce using rule 56 (asset_designator)


State 80

  143 ASSET_IDENTIFIER_LIST: ASSET_IDENTIFIER . ASSET_IDENTIFIERS

    IDENTIFIER_TOK  shift, and go to state 78

    $default  reduce using rule 144 (ASSET_IDENTIFIERS)

    ASSET_IDENTIFIERS  go to state 125
    ASSET_IDENTIFIER   go to state 126


State 81

   64 sst_asset_name: UID STAR .

    $default  reduce using rule 64 (sst_asset_name)


State 82

  142 ASSET_NUMBER: NUMBER_TOK .

    $default  reduce using rule 142 (ASSET_NUMBER)


State 83

   63 sst_asset_name: UID ASSET_NUMBER_LIST .

    $default  reduce using rule 63 (sst_asset_name)


State 84

  139 ASSET_NUMBER_LIST: ASSET_NUMBER . ASSET_NUMBERS

    NUMBER_TOK  shift, and go to state 82

    $default  reduce using rule 140 (ASSET_NUMBERS)

    ASSET_NUMBERS  go to state 127
    ASSET_NUMBER   go to state 128


State 85

   33 sst_set_extended_args: FLAG . sst_flags

    NONE        shift, and go to state 129
    WRITE_ONCE  shift, and go to state 130
    NO_RP       shift, and go to state 131
    NO_CONF     shift, and go to state 132

    $default  reduce using rule 34 (sst_flags)

    sst_flags   go to state 133
    sst_flag    go to state 134
    none        go to state 135
    write_once  go to state 136
    no_rp       go to state 137
    no_conf     go to state 138


State 86

   16 set_command: SET SST sst_set_base_args sst_set_extended_args .

    $default  reduce using rule 16 (set_command)


State 87

   26 literal_or_random_data: DATA . LITERAL
   27                       | DATA . STAR

    STAR         shift, and go to state 139
    LITERAL_TOK  shift, and go to state 140
    HEX_LIST     shift, and go to state 141

    LITERAL  go to state 142


State 88

   31 sst_set_base_args: sst_asset_name DFNAME . sst_asset_set_file_path

    FILE_PATH_TOK  shift, and go to state 143

    sst_asset_set_file_path  go to state 144
    FILE_PATH                go to state 145


State 89

   30 sst_set_base_args: sst_asset_name VAR . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 146


State 90

   28 sst_set_base_args: sst_asset_name literal_or_random_data .

    $default  reduce using rule 28 (sst_set_base_args)


State 91

  124 key_set_source: POLICY . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 147


State 92

  128 key_set_args: asset_designator FROM . single_existing_asset POLICY IDENTIFIER

    STAR            shift, and go to state 60
    IDENTIFIER_TOK  shift, and go to state 71

    single_existing_asset  go to state 148
    random_picked_asset    go to state 149
    IDENTIFIER             go to state 150


State 93

  123 key_set_source: literal_or_random_data .
  126 key_data_or_not: literal_or_random_data .

    WITH      reduce using rule 126 (key_data_or_not)
    $default  reduce using rule 123 (key_set_source)


State 94

  127 key_set_args: asset_designator key_set_sources .

    $default  reduce using rule 127 (key_set_args)


State 95

  122 key_set_sources: key_set_source . key_set_sources

    POLICY  shift, and go to state 91
    DATA    shift, and go to state 87

    $default  reduce using rule 121 (key_set_sources)

    literal_or_random_data  go to state 151
    key_set_sources         go to state 152
    key_set_source          go to state 95


State 96

  129 key_set_args: asset_designator key_data_or_not . WITH policy_specs

    WITH  shift, and go to state 153


State 97

  114 policy_asset_spec: NAME STAR .

    $default  reduce using rule 114 (policy_asset_spec)


State 98

  113 policy_asset_spec: NAME ASSET_IDENTIFIER_LIST .

    $default  reduce using rule 113 (policy_asset_spec)


State 99

   69 policy_usage_list: ATTR . policy_usage policy_usages

    NUMBER_TOK  shift, and go to state 154
    EXPORT      shift, and go to state 155
    COPY        shift, and go to state 156
    ENCRYPT     shift, and go to state 157
    DECRYPT     shift, and go to state 158
    SIGN        shift, and go to state 159
    VERIFY      shift, and go to state 160
    DERIVE      shift, and go to state 161
    NOEXPORT    shift, and go to state 162
    NOCOPY      shift, and go to state 163
    NOENCRYPT   shift, and go to state 164
    NODECRYPT   shift, and go to state 165
    NOSIGN      shift, and go to state 166
    NOVERIFY    shift, and go to state 167
    NODERIVE    shift, and go to state 168
    PERSISTENT  shift, and go to state 169
    VOLATILE    shift, and go to state 170

    key_size      go to state 171
    export        go to state 172
    noexport      go to state 173
    copy          go to state 174
    nocopy        go to state 175
    encrypt       go to state 176
    noencrypt     go to state 177
    decrypt       go to state 178
    nodecrypt     go to state 179
    sign          go to state 180
    nosign        go to state 181
    verify        go to state 182
    noverify      go to state 183
    derive        go to state 184
    noderive      go to state 185
    persistent    go to state 186
    volatle       go to state 187
    policy_usage  go to state 188


State 100

  105 policy_type: TYPE . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 189


State 101

  106 policy_algorithm: ALG . IDENTIFIER

    IDENTIFIER_TOK  shift, and go to state 71

    IDENTIFIER  go to state 190


State 102

  109 policy_spec: policy_usage_list .

    $default  reduce using rule 109 (policy_spec)


State 103

  110 policy_spec: policy_type .

    $default  reduce using rule 110 (policy_spec)


State 104

  111 policy_spec: policy_algorithm .

    $default  reduce using rule 111 (policy_spec)


State 105

  119 policy_set_args: policy_asset_spec policy_specs .

    $default  reduce using rule 119 (policy_set_args)


State 106

  108 policy_specs: policy_spec . policy_specs
